--- a/model_LDA_on_Vaccine_Brands.ipynb
+++ b/model_LDA_on_Vaccine_Brands.ipynb
@@ -1968,7 +1968,7 @@
         "        res.loc[0, topic_weight[0]] = topic_weight[1]\n",
         "    return res\n"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1980,7 +1980,7 @@
         "# find topic probabilities that model assign to all documents\n",
         "topics = [best_model[corpus[i]] for i in range(len(text_data))]"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1994,7 +1994,7 @@
         "pd.concat([topics_document_to_dataframe(topics_document, num_topics=best_topic_number) for topics_document in topics]) \\\n",
         "  .reset_index(drop=True).fillna(0)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -2005,12 +2005,12 @@
           "height": 359
         },
         "id": "Xxi0uj16ihP6",
-        "outputId": "10bbc010-6abc-497d-a8c1-c22f01c89a25"
+        "outputId": "35db6e3c-3f56-4eab-a901-b305bb2d2862"
       },
       "source": [
         "document_topic.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2052,26 +2052,26 @@
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
-              "      <td>0.70</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.02</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.820000</td>\n",
-              "      <td>0.020000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2081,23 +2081,23 @@
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
-              "      <td>0.70</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.02</td>\n",
-              "      <td>0.820000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2107,62 +2107,62 @@
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
-              "      <td>0.70</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.02</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.820000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>0.820000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.02</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.420000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.42</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.02</td>\n",
-              "      <td>0.020000</td>\n",
-              "      <td>0.820000</td>\n",
-              "      <td>0.020000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.700000</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
+              "      <td>0.033333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
@@ -2172,7 +2172,7 @@
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
-              "      <td>0.70</td>\n",
+              "      <td>0.700000</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
               "      <td>0.033333</td>\n",
@@ -2182,17 +2182,17 @@
               "</div>"
             ],
             "text/plain": [
-              "          0         1         2         3  ...     6         7         8         9\n",
-              "0  0.033333  0.033333  0.033333  0.033333  ...  0.70  0.033333  0.033333  0.033333\n",
-              "1  0.020000  0.020000  0.020000  0.020000  ...  0.02  0.020000  0.820000  0.020000\n",
-              "2  0.033333  0.033333  0.033333  0.033333  ...  0.70  0.033333  0.033333  0.033333\n",
-              "3  0.020000  0.020000  0.020000  0.020000  ...  0.02  0.820000  0.020000  0.020000\n",
-              "4  0.033333  0.033333  0.033333  0.033333  ...  0.70  0.033333  0.033333  0.033333\n",
-              "5  0.020000  0.020000  0.020000  0.020000  ...  0.02  0.020000  0.020000  0.820000\n",
-              "6  0.820000  0.020000  0.020000  0.020000  ...  0.02  0.020000  0.020000  0.020000\n",
-              "7  0.020000  0.420000  0.020000  0.020000  ...  0.42  0.020000  0.020000  0.020000\n",
-              "8  0.020000  0.020000  0.020000  0.020000  ...  0.02  0.020000  0.820000  0.020000\n",
-              "9  0.033333  0.033333  0.033333  0.033333  ...  0.70  0.033333  0.033333  0.033333\n",
+              "          0         1         2  ...         7         8         9\n",
+              "0  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.033333\n",
+              "1  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.700000\n",
+              "2  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.700000\n",
+              "3  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.033333\n",
+              "4  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.700000\n",
+              "5  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.700000\n",
+              "6  0.033333  0.700000  0.033333  ...  0.033333  0.033333  0.033333\n",
+              "7  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.700000\n",
+              "8  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.033333\n",
+              "9  0.033333  0.033333  0.033333  ...  0.033333  0.033333  0.033333\n",
               "\n",
               "[10 rows x 10 columns]"
             ]
@@ -2200,7 +2200,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 26
         }
       ]
     },
@@ -2221,7 +2221,7 @@
           "height": 359
         },
         "id": "piiTtw9AihP7",
-        "outputId": "cf9c14a8-ca64-4c29-dab0-86cbfc2ee828"
+        "outputId": "72ea85a2-488f-4f1d-8da5-8ff9dbd07b26"
       },
       "source": [
         "def format_topics_sentences(ldamodel=best_model, corpus=corpus, texts=text_data):\n",
@@ -2256,7 +2256,7 @@
         "# Show\n",
         "df_dominant_topic.head(10)\n"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2291,80 +2291,80 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>0</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>0.70</td>\n",
-              "      <td>Moderna, Pfizer, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Moderna]</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Pfizer, Astrazenca, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Pfizer]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1</td>\n",
-              "      <td>7.0</td>\n",
-              "      <td>0.82</td>\n",
-              "      <td>Pfizer, Moderna, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Pfizer, Moderna]</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Astrazenca, Pfizer, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Astrazenca]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>0.70</td>\n",
-              "      <td>Moderna, Pfizer, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Moderna]</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Astrazenca, Pfizer, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Astrazenca]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>3</td>\n",
-              "      <td>9.0</td>\n",
-              "      <td>0.82</td>\n",
-              "      <td>Pfizer, Moderna, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Pfizer, Moderna]</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Pfizer, Astrazenca, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Pfizer]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>4</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>0.70</td>\n",
-              "      <td>Moderna, Pfizer, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Moderna]</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Astrazenca, Pfizer, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Astrazenca]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>5</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.42</td>\n",
-              "      <td>Pfizer, Moderna, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Pfizer, Moderna]</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Astrazenca, Pfizer, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Astrazenca]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>6</td>\n",
-              "      <td>7.0</td>\n",
-              "      <td>0.82</td>\n",
-              "      <td>Pfizer, Moderna, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Pfizer, Moderna]</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Pfizer, Astrazenca, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Pfizer]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>7</td>\n",
-              "      <td>8.0</td>\n",
-              "      <td>0.82</td>\n",
-              "      <td>Pfizer, Moderna, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Pfizer, Moderna]</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Astrazenca, Pfizer, Moderna, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Astrazenca]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
               "      <td>8</td>\n",
-              "      <td>7.0</td>\n",
-              "      <td>0.82</td>\n",
-              "      <td>Pfizer, Moderna, Astrazenca, Johnson&amp;jonson, C...</td>\n",
-              "      <td>[Pfizer, Moderna]</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>Moderna, Pfizer, Astrazenca, Johnson&amp;jonson, C...</td>\n",
+              "      <td>[Moderna]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
               "      <td>9</td>\n",
               "      <td>6.0</td>\n",
-              "      <td>0.70</td>\n",
+              "      <td>0.7</td>\n",
               "      <td>Moderna, Pfizer, Astrazenca, Johnson&amp;jonson, C...</td>\n",
               "      <td>[Moderna]</td>\n",
               "    </tr>\n",
@@ -2373,17 +2373,17 @@
               "</div>"
             ],
             "text/plain": [
-              "   Document_No  ...               Text\n",
-              "0            0  ...          [Moderna]\n",
-              "1            1  ...  [Pfizer, Moderna]\n",
-              "2            2  ...          [Moderna]\n",
-              "3            3  ...  [Pfizer, Moderna]\n",
-              "4            4  ...          [Moderna]\n",
-              "5            5  ...  [Pfizer, Moderna]\n",
-              "6            6  ...  [Pfizer, Moderna]\n",
-              "7            7  ...  [Pfizer, Moderna]\n",
-              "8            8  ...  [Pfizer, Moderna]\n",
-              "9            9  ...          [Moderna]\n",
+              "   Document_No  ...          Text\n",
+              "0            0  ...      [Pfizer]\n",
+              "1            1  ...  [Astrazenca]\n",
+              "2            2  ...  [Astrazenca]\n",
+              "3            3  ...      [Pfizer]\n",
+              "4            4  ...  [Astrazenca]\n",
+              "5            5  ...  [Astrazenca]\n",
+              "6            6  ...      [Pfizer]\n",
+              "7            7  ...  [Astrazenca]\n",
+              "8            8  ...     [Moderna]\n",
+              "9            9  ...     [Moderna]\n",
               "\n",
               "[10 rows x 5 columns]"
             ]
@@ -2391,7 +2391,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 27
         }
       ]
     }
