--- a/Vacc_Reactions_Data_Modelling.ipynb
+++ b/Vacc_Reactions_Data_Modelling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAQPhyXZ5dqvtUuNxodFFw",
+      "authorship_tag": "ABX9TyOOUM/n1IOkWcJBe7v4h2cN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +233,7 @@
         "column_selected = data_frame[[\"CleanedTweet\"]]\n",
         "data = column_selected.copy()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -271,7 +271,7 @@
         "data[\"ct25\"]= data[\"CleanedTweet\"].str.count( \"no side affect\", re.I)\n",
         "data[\"ct26\"]= data[\"CleanedTweet\"].str.count( \"no side affects\", re.I)\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
         "data[\"Vomitings\"] = data[\"ct18\"]+data[\"ct19\"]+data[\"ct20\"]\n",
         "data[\"No_reactions\"]= data[\"ct21\"] + data[\"ct22\"]+ data[\"ct23\"]+ data[\"ct24\"]+ data[\"ct25\"]+ data[\"ct26\"]\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +308,7 @@
       "source": [
         "data"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +850,7 @@
         "#dropping the previous count coloumns to clean the dataframe\n",
         "dat_frame = data.drop(['ct1', 'ct2','ct3','ct4','ct5','ct6','ct7','ct8','ct9','ct10','ct11','ct12','ct13','ct14','ct15','ct16','ct17','ct18','ct19','ct20','ct21','ct22','ct23','ct24','ct25','ct26'], axis=1)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -864,7 +864,7 @@
         "df = pd.DataFrame(list(dict.items()),columns = ['Reactions','Reaction Count']) \n",
         "df['Percentage_Reactions']=df['Reaction Count'].value_counts(normalize=True) * 100"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -880,9 +880,10 @@
       "source": [
         "dict = dat_frame.sum(axis = 0, skipna = True)\n",
         "df = pd.DataFrame(list(dict.items()),columns = ['Reactions','Reaction Count']) \n",
+        "df['percent_count'] = (df['Reaction Count'] / df['Reaction Count'].sum()) * 100\n",
         "df"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -990,23 +991,23 @@
       "cell_type": "code",
       "metadata": {
         "id": "VOKIaRaCSm0K",
-        "outputId": "dc5b4b5a-dafa-4514-f208-f6cad480a2b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "outputId": "dc5b4b5a-dafa-4514-f208-f6cad480a2b2"
       },
       "source": [
         "# Plotting graphs for the reactions observed from the tweets using plotly\n",
         "import plotly.express as px \n",
-        "fig = px.scatter(df, x=\"Reactions\", y=\"Reaction Count\",\n",
+        "fig = px.scatter(df, x=\"Reactions\", y=\"% of each reaction observed\",\n",
         "                 color=\"Reactions\",\n",
-        "                 size='Reaction Count', \n",
-        "                 hover_data=['Reaction Count'])\n",
+        "                 size='percent_count', \n",
+        "                 hover_data=['percent_count'])\n",
         "  \n",
         "fig.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
