--- a/Vacc_Reactions_Data_Modelling.ipynb
+++ b/Vacc_Reactions_Data_Modelling.ipynb
@@ -41,7 +41,7 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,7 +244,7 @@
         "column_selected = data_frame[[\"CleanedTweet\"]]\n",
         "data = column_selected.copy()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -275,26 +275,21 @@
         "data[\"ct19\"]= data[\"CleanedTweet\"].str.count( \"throw up\", re.I)\n",
         "data[\"ct20\"]= data[\"CleanedTweet\"].str.count( \"nausea\", re.I)\n",
         "\n",
-        "data[\"ct21\"]= data[\"CleanedTweet\"].str.count( \"all good\", re.I)\n",
-        "data[\"ct22\"]= data[\"CleanedTweet\"].str.count( \"so good\", re.I)\n",
-        "data[\"ct23\"]= data[\"CleanedTweet\"].str.count( \"so safe\", re.I)\n",
-        "data[\"ct24\"]= data[\"CleanedTweet\"].str.count( \"all safe\", re.I)\n",
-        "data[\"ct25\"]= data[\"CleanedTweet\"].str.count( \"no side affect\", re.I)\n",
-        "data[\"ct26\"]= data[\"CleanedTweet\"].str.count( \"no side affects\", re.I)\n",
+        "data[\"ct21\"]= data[\"CleanedTweet\"].str.count( \"blood clots\", re.I)\n",
+        "data[\"ct22\"]= data[\"CleanedTweet\"].str.count( \"blood clot\", re.I)\n",
         "\n",
-        "data[\"ct26\"]= data[\"CleanedTweet\"].str.count( \"blood clots\", re.I)\n",
-        "data[\"ct27\"]= data[\"CleanedTweet\"].str.count( \"blood clot\", re.I)\n",
+        "data[\"ct23\"]= data[\"CleanedTweet\"].str.count( \"fatigue\", re.I)\n",
         "\n",
-        "data[\"ct28\"]= data[\"CleanedTweet\"].str.count( \"fatigue\", re.I)\n",
+        "data[\"ct24\"]= data[\"CleanedTweet\"].str.count( \"heartattack\", re.I)\n",
+        "data[\"ct25\"]= data[\"CleanedTweet\"].str.count( \"heart attack\", re.I)\n",
+        "data[\"ct26\"]= data[\"CleanedTweet\"].str.count( \"heartpain\", re.I)\n",
+        "data[\"ct27\"]= data[\"CleanedTweet\"].str.count( \"heart pain\", re.I)\n",
         "\n",
-        "data[\"ct29\"]= data[\"CleanedTweet\"].str.count( \"heartattack\", re.I)\n",
-        "data[\"ct30\"]= data[\"CleanedTweet\"].str.count( \"heart attack\", re.I)\n",
-        "data[\"ct31\"]= data[\"CleanedTweet\"].str.count( \"heartpain\", re.I)\n",
-        "data[\"ct32\"]= data[\"CleanedTweet\"].str.count( \"heart pain\", re.I)\n",
-        "\n",
-        "data[\"ct33\"]= data[\"CleanedTweet\"].str.count( \"kidney\", re.I)\n"
+        "data[\"ct28\"]= data[\"CleanedTweet\"].str.count( \"kidney\", re.I)\n",
+        "data[\"ct29\"]= data[\"CleanedTweet\"].str.count( \"death\", re.I)\n",
+        "data[\"ct30\"]= data[\"CleanedTweet\"].str.count( \"dead\", re.I)\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,14 +307,14 @@
         "data[\"Body_pains\"]= data[\"ct7\"] + data[\"ct8\"]\n",
         "data[\"Arm_soreness\"]= data[\"ct9\"] + data[\"ct10\"]+ data[\"ct11\"]+ data[\"ct12\"]+ data[\"ct13\"]+ data[\"ct14\"]\n",
         "data[\"Cough\"]= data[\"ct15\"] + data[\"ct16\"]+ data[\"ct17\"]\n",
-        "data[\"Blood_clots\"] = data[\"ct26\"]+data[\"ct27\"]\n",
+        "data[\"Blood_clots\"] = data[\"ct21\"]+data[\"ct22\"]\n",
         "data[\"Vomitings\"] = data[\"ct18\"]+data[\"ct19\"]+data[\"ct20\"]\n",
-        "data[\"Fatigue\"] = data[\"ct28\"]\n",
-        "data[\"Heart_attack\"] = data[\"ct29\"]+data[\"ct30\"]+data[\"ct31\"]+data[\"ct32\"]\n",
-        "data[\"Kidney_failure\"] = data[\"ct33\"]\n",
-        "data[\"No_reactions\"]= data[\"ct21\"] + data[\"ct22\"]+ data[\"ct23\"]+ data[\"ct24\"]+ data[\"ct25\"]+ data[\"ct26\"]\n"
+        "data[\"Fatigue\"] = data[\"ct23\"]\n",
+        "data[\"Heart_attack\"] = data[\"ct24\"]+data[\"ct25\"]+data[\"ct26\"]+data[\"ct27\"]\n",
+        "data[\"Kidney_failure\"] = data[\"ct28\"]\n",
+        "data[\"Deadth\"] = data[\"ct29\"]+data[\"20\"]\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +330,7 @@
       "source": [
         "data"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,21 +1002,7 @@
       },
       "source": [
         "#dropping the previous count coloumns to clean the dataframe\n",
-        "dat_frame = data.drop(['ct1', 'ct2','ct3','ct4','ct5','ct6','ct7','ct8','ct9','ct10','ct11','ct12','ct13','ct14','ct15','ct16','ct17','ct18','ct19','ct20','ct21','ct22','ct23','ct24','ct25','ct26'], axis=1)"
-      ],
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qMUXS8nWLoXY"
-      },
-      "source": [
-        "#aggrigating the results and storing into dictionary and representing it through data frame\n",
-        "dict = dat_frame.sum(axis = 0, skipna = True)\n",
-        "df = pd.DataFrame(list(dict.items()),columns = ['Reactions','Reaction Count']) \n",
-        "df['Percentage_Reactions']=df['Reaction Count'].value_counts(normalize=True) * 100"
+        "dat_frame = data.drop(['ct1', 'ct2','ct3','ct4','ct5','ct6','ct7','ct8','ct9','ct10','ct11','ct12','ct13','ct14','ct15','ct16','ct17','ct18','ct19','ct20','ct21','ct22','ct23','ct24','ct25','ct26','ct27','ct28','ct29','ct30'], axis=1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1038,8 +1019,8 @@
       },
       "source": [
         "dict = dat_frame.sum(axis = 0, skipna = True)\n",
-        "df = pd.DataFrame(list(dict.items()),columns = ['Reactions','Reaction Count']) \n",
-        "df['percent_count'] = (df['Reaction Count'] / df['Reaction Count'].sum()) * 100\n",
+        "df = pd.DataFrame(list(dict.items()),columns = ['Reactions','Reaction_Count']) \n",
+        "df['Percentage_Reactions'] = (df['Reaction_Count'] / df['Reaction_Count'].sum()) * 100\n",
         "df"
       ],
       "execution_count": null,
@@ -1161,8 +1142,8 @@
         "import plotly.express as px \n",
         "fig = px.scatter(df, x=\"Reactions\", y=\"% of each reaction observed\",\n",
         "                 color=\"Reactions\",\n",
-        "                 size='percent_count', \n",
-        "                 hover_data=['percent_count'])\n",
+        "                 size='Percentage_Reactions', \n",
+        "                 hover_data=['Percentage_Reactions'])\n",
         "  \n",
         "fig.show()"
       ],
