--- a/Vacc_Dose_TM_Bi-gram.ipynb
+++ b/Vacc_Dose_TM_Bi-gram.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPGJTPC9zoXbm6yqGYdEfRY",
+      "authorship_tag": "ABX9TyMetwn+DVh8NJGnv99FjbU2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1871,11 +1871,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "yHdGveQQIkcZ",
-        "outputId": "f93e1427-6330-441d-8d67-4f86780a6f0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        }
+        },
+        "outputId": "f93e1427-6330-441d-8d67-4f86780a6f0f"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1892,7 +1892,7 @@
         "# reference x so you don't need to change the range each time x changes\n",
         "xlocs=[i for i in x]\n",
         "xlabs=[i for i in x]\n",
-        "plotdata['Percentage of dosage'].plot(kind=\"bar\", title=\"\")\n",
+        "plotdata['Percentage of dosage'].plot(kind=\"bar\", title=\"Vaccine Dose Analysis\")\n",
         "plt.xlabel('Dose Type')\n",
         "plt.ylabel('% of people getting vaccination Dosage results')\n",
         "plt.xticks(xlocs, xlabs)\n",
@@ -1904,7 +1904,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
