--- a/Vacc_Dose_TM_Bi-gram.ipynb
+++ b/Vacc_Dose_TM_Bi-gram.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMetwn+DVh8NJGnv99FjbU2",
+      "authorship_tag": "ABX9TyPAGYGFbPF8QqSYgix0rLgr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1902,7 +1902,8 @@
         "    yval = bar.get_height()\n",
         "    plt.text(bar.get_x(), yval + .5, yval, weight=\"bold\")\n",
         "\n",
-        "plt.show()"
+        "plt.show()\n",
+        "plt.savefig('VaccineDosage.png', dpi=300)"
       ],
       "execution_count": null,
       "outputs": [
