--- a/Vacc_Brands_TM_Monograms.ipynb
+++ b/Vacc_Brands_TM_Monograms.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMoZRitQ2y3Es3ERo2RLzqD",
+      "authorship_tag": "ABX9TyMPcyQSm64ZJZbcNKL4drS4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +267,7 @@
         "# Calculating and displaying the frequency of the unigrams\n",
         "unigram_words = nltk.FreqDist(unigram_word)\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
         "df = pd.DataFrame(list(unigram_words.items()),columns = ['Unigram_Words','Frequency'])\n",
         "df"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,12 +435,13 @@
         "# Create the pandas DataFrame\n",
         "df = pd.DataFrame(Different_Vaccines, columns = ['Vaccine_Brands', 'Brand_usage_frequency'])\n",
         "df['Percentage_diff_brands'] = (df['Brand_usage_frequency'] / df['Brand_usage_frequency'].sum()) * 100\n",
+        "df['Percentage_diff_brands']=df['Percentage_diff_brands'].round(decimals=2)\n",
         "percentageOfBrands = df['Percentage_diff_brands'].tolist()\n",
         "vaccineBrands = df['Vaccine_Brands'].tolist()\n",
         "# print dataframe.\n",
         "df"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,22 +546,33 @@
         "outputId": "fdd0cb0c-a920-4d24-acc9-275a775ccf11"
       },
       "source": [
-        "from matplotlib import pyplot as plt\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
-        "plotdata = pd.DataFrame(\n",
-        "    {\"Percentage of Brand Usage\": percentageOfBrands}, \n",
-        "    index= vaccineBrands)\n",
-        "# Plot a bar chart\n",
-        "plotdata.plot(kind=\"bar\", color=['red'])\n",
+        "# set the initial x-values to what you are wanting to plot\n",
+        "x=vaccineBrands\n",
+        "y=percentageOfBrands\n",
         "\n",
-        "# Rotate the x-labels by 30 degrees, and keep the text aligned horizontally\n",
+        "bars = plt.bar(x, height=y, width=.3)\n",
+        "\n",
+        "xlocs, xlabs = plt.xticks()\n",
+        "\n",
+        "# reference x so you don't need to change the range each time x changes\n",
+        "xlocs=[i for i in x]\n",
+        "xlabs=[i for i in x]\n",
+        "plotdata['Brand Usage Analysis'].plot(kind=\"bar\", title=\"Brand Usage Analysis\")\n",
+        "plt.xlabel('Vaccination Brands')\n",
+        "plt.ylabel('% of Brand Used')\n",
+        "plt.xticks(xlocs, xlabs)\n",
         "plt.xticks(rotation=30, horizontalalignment=\"center\")\n",
-        "plt.title(\"Brand Usage Frequency Analysis \")\n",
-        "plt.xlabel(\"Vaccination Brands\")\n",
-        "plt.ylabel(\"% of Brands Usage\")\n",
+        "\n",
+        "for bar in bars:\n",
+        "    yval = bar.get_height()\n",
+        "    plt.text(bar.get_x(), yval + .5, yval, weight=\"bold\")\n",
+        "\n",
+        "plt.show()\n",
         "plt.savefig('VaccineBrands.png', dpi=300)\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
