--- a/Vacc_Brands_TM_Monograms.ipynb
+++ b/Vacc_Brands_TM_Monograms.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMPcyQSm64ZJZbcNKL4drS4",
+      "authorship_tag": "ABX9TyNwnxTx1g20gkLVeni1MpGv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -418,7 +418,9 @@
         "Astrazeneca_Vaccine = ['astrazeneca','breakingastrazeneca','oxfordastrazeneca','astrazenecas',\n",
         "                       'astrazenecavaccine','astrazenecaoxford','astrazenecauk']\n",
         "Sputnik_Vaccine = ['sputnikint','sputnik','sputnikvaccine','sputnikv','sputnikvaccineke',\n",
-        "                   'sputnikvaccineinkenya','sputnikvaccinekenya']                       \n",
+        "                   'sputnikvaccineinkenya','sputnikvaccinekenya']\n",
+        "Sinopharm_Vaccine=['sinopharm']   \n",
+        "Sinovac_Vaccine=['Sinovac']                                       \n",
         "\n",
         "Pfizer   = df.loc[df['Unigram_Words'].isin(Pfizer_Vaccine), 'Frequency'].sum()\n",
         "Moderna  = df.loc[df['Unigram_Words'].isin(Moderna_Vaccine), 'Frequency'].sum()\n",
@@ -427,10 +429,12 @@
         "Covishield = df.loc[df['Unigram_Words'].isin(Covishield_Vaccine), 'Frequency'].sum()\n",
         "Astrazeneca = df.loc[df['Unigram_Words'].isin(Astrazeneca_Vaccine), 'Frequency'].sum()\n",
         "Sputnik = df.loc[df['Unigram_Words'].isin(Sputnik_Vaccine), 'Frequency'].sum()\n",
+        "Sinopharm = df.loc[df['Unigram_Words'].isin(Sinopharm_Vaccine), 'Frequency'].sum()\n",
+        "Sinovac = df.loc[df['Unigram_Words'].isin(Sinovac_Vaccine), 'Frequency'].sum()\n",
         "\n",
         "# initialize list of lists\n",
         "Different_Vaccines = [['Pfizer', Pfizer], ['Moderna', Moderna], ['Johnson', Johnson],['Covaxin', Covaxin], \n",
-        "                      ['Covishield',Covishield],['Astrazeneca', Astrazeneca],['Sputnik', Sputnik]]\n",
+        "                      ['Covishield',Covishield],['Astrazeneca', Astrazeneca],['Sputnik', Sputnik],['Sinopharm',Sinopharm],['Sinovac',Sinovac]]\n",
         "  \n",
         "# Create the pandas DataFrame\n",
         "df = pd.DataFrame(Different_Vaccines, columns = ['Vaccine_Brands', 'Brand_usage_frequency'])\n",
