--- a/Vacc_Reactions_Data_Modelling.ipynb
+++ b/Vacc_Reactions_Data_Modelling.ipynb
@@ -256,8 +256,7 @@
         "# counting the frequency of each reaction by observing tweet patterns \n",
         "data[\"ct1\"]= data[\"CleanedTweet\"].str.count(\"fever\", re.I) \n",
         "data[\"ct2\"]= data[\"CleanedTweet\"].str.count( \"chills\", re.I) \n",
-        "data[\"ct3\"]= data[\"CleanedTweet\"].str.count( \"headache\", re.I) \n",
-        "data[\"ct4\"]= data[\"CleanedTweet\"].str.count( \"neck pain\", re.I) \n",
+        "data[\"ct3\"]= data[\"CleanedTweet\"].str.count( \"headache\", re.I)  \n",
         "data[\"ct5\"]= data[\"CleanedTweet\"].str.count( \"cold\", re.I) \n",
         "data[\"ct6\"]= data[\"CleanedTweet\"].str.count( \"flu\", re.I) \n",
         "data[\"ct7\"]= data[\"CleanedTweet\"].str.count( \"body pain\", re.I) \n",
@@ -300,7 +299,6 @@
         "data[\"Fever\"] = data[\"ct1\"] \n",
         "data[\"Chills\"] = data[\"ct2\"]\n",
         "data[\"Headache\"]= data[\"ct3\"] \n",
-        "data[\"Neck_pain\"]= data[\"ct4\"]\n",
         "data[\"Cold\"]= data[\"ct5\"] + data[\"ct6\"]\n",
         "data[\"Body_pains\"]= data[\"ct7\"] + data[\"ct8\"]\n",
         "data[\"Arm_soreness\"]= data[\"ct9\"] + data[\"ct10\"]+ data[\"ct11\"]+ data[\"ct12\"]+ data[\"ct13\"]+ data[\"ct14\"]\n",
@@ -916,7 +914,7 @@
       },
       "source": [
         "#dropping the previous count coloumns to clean the dataframe\n",
-        "dat_frame = data.drop(['ct1', 'ct2','ct3','ct4','ct5','ct6','ct7','ct8','ct9','ct10','ct11','ct12','ct13','ct14','ct15','ct16','ct17','ct18','ct19','ct20','ct21','ct23','ct24','ct25','ct26','ct27','ct28'], axis=1)"
+        "dat_frame = data.drop(['ct1', 'ct2','ct3','ct5','ct6','ct7','ct8','ct9','ct10','ct11','ct12','ct13','ct14','ct15','ct16','ct17','ct18','ct19','ct20','ct21','ct23','ct24','ct25','ct26','ct27','ct28'], axis=1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1355,174 +1353,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FrVb32ECk7VK"
-      },
-      "source": [
-        "df.to_csv('Reactions.csv')\n",
-        "import pandas as pd\n",
-        "df= pd.read_csv('Reactions.csv')\n",
-        "df"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5be2URyivM1p",
-        "outputId": "d5398fa5-8023-48d7-c75a-ca412ce0e993",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 390
-        }
-      },
-      "source": [
-        "df=df.drop(2)\n",
-        "df"
-      ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Unnamed: 0</th>\n",
-              "      <th>Reactions</th>\n",
-              "      <th>Reaction_Count</th>\n",
-              "      <th>Percentage_Reactions</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>Fever</td>\n",
-              "      <td>924</td>\n",
-              "      <td>12.6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>Chills</td>\n",
-              "      <td>493</td>\n",
-              "      <td>6.7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>5</td>\n",
-              "      <td>Cold</td>\n",
-              "      <td>1722</td>\n",
-              "      <td>23.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>6</td>\n",
-              "      <td>Body_pains</td>\n",
-              "      <td>44</td>\n",
-              "      <td>0.6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>7</td>\n",
-              "      <td>Arm_soreness</td>\n",
-              "      <td>1077</td>\n",
-              "      <td>14.7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>8</td>\n",
-              "      <td>Cough</td>\n",
-              "      <td>174</td>\n",
-              "      <td>2.4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>9</td>\n",
-              "      <td>Blood_clots</td>\n",
-              "      <td>981</td>\n",
-              "      <td>13.4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>10</td>\n",
-              "      <td>Vomitings</td>\n",
-              "      <td>192</td>\n",
-              "      <td>2.6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>11</td>\n",
-              "      <td>Fatigue</td>\n",
-              "      <td>482</td>\n",
-              "      <td>6.6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>12</td>\n",
-              "      <td>Heart_attack</td>\n",
-              "      <td>81</td>\n",
-              "      <td>1.1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>13</td>\n",
-              "      <td>Kidney_failure</td>\n",
-              "      <td>177</td>\n",
-              "      <td>2.4</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    Unnamed: 0       Reactions  Reaction_Count  Percentage_Reactions\n",
-              "0            1           Fever             924                  12.6\n",
-              "1            2          Chills             493                   6.7\n",
-              "3            5            Cold            1722                  23.5\n",
-              "4            6      Body_pains              44                   0.6\n",
-              "5            7    Arm_soreness            1077                  14.7\n",
-              "6            8           Cough             174                   2.4\n",
-              "7            9     Blood_clots             981                  13.4\n",
-              "8           10       Vomitings             192                   2.6\n",
-              "9           11         Fatigue             482                   6.6\n",
-              "10          12    Heart_attack              81                   1.1\n",
-              "11          13  Kidney_failure             177                   2.4"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "VOKIaRaCSm0K",
-        "outputId": "5811c19d-7fed-49e1-805c-43897479a8c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "outputId": "5811c19d-7fed-49e1-805c-43897479a8c3"
       },
       "source": [
         "# Plotting graphs for the reactions observed from the tweets using plotly\n",
